# dr-dspy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/.internal_dspyai/: pyproject.toml
.github/workflows/: build_and_release.yml  dr_dspy_tests.yml  precommits_check.yml  run_tests.yml
configs/optim/: decoder_slot_addendum_v0.yaml  decoder_slot_grid_v0.yaml
docs/: agent_prompt_optimizer_impl.md  agent_prompt_template_configs.md  behavioral.md  final_review.md  final_review_drllm.md  final_review_dspy.md  starting_state.md  structural.md
docs/methods/: copro.md  gepa.md  miprov2.md
docs/migration/: call-options.md  datasets.md  dependencies.md  dr_llm_text_pilot.md  finetune.md  history.md  memoization.md  persistence.md  primitives.md  runcontext.md  taskspec.md  teleprompt.md
docs/overrides/: home.html
dr-docs/: dspy_notes.md
dr-dspy/: .env.example  .gitignore  Dockerfile.ci  GOAL.md  HANDOFF.md  README.md  TESTING.md  alembic.ini  dbos_flow.html  pyproject.toml
dr-dspy/docs/: append-only-eval-records-design.md  generation-experiment-design.md  platform-graph-workflow-implementation.md  repo-split-and-naming-plan.md  resource-exhaustion-and-failure-handling.md
dr-dspy/docs/plans/: 2026-06-26-encoder-decoder-eval-and-optimization.md
dr-dspy/docs/prompts/: archive-v0-surfaces.md
dr-dspy/scripts/: audit_suspect_recording_failures.py  humaneval_dspy_eval_only_dbos_v0.py  humaneval_dspy_eval_only_encdec_dbos_v0.py  humaneval_dspy_harness_bootstrap_v0.py  humaneval_eval_dbos_v1.py  humaneval_study_v1.py  reclassify_encdec_generation_http_errors.py
dr-dspy/scripts/ci/: ensure_pypi_dspy.sh  integration.sh  lint.sh  unit.sh
dr-dspy/src/dr_dspy/: analysis.py  batch_operation.py  code_eval.py  code_extraction.py  compression.py  copro_proposers.py  dbos_runtime.py  dspy_runner.py  eval_logging.py  eval_records.py  eval_repair.py  eval_reporting.py  eval_scores.py  eval_set.py  event_log.py  experiment_backend.py  experiment_dimensions.py  experiment_spec.py  failure_policy.py  hashing.py  human_eval.py  human_eval_sampling.py  humaneval_dbos_flow.py  humaneval_direct_dbos.py  humaneval_encdec_dbos.py  humaneval_eval_dbos.py  humaneval_study_dbos.py  import_inference.py  lm_logging.py  node_runner.py  openrouter_lm.py  runtime.py  scoring.py  serialization.py  signatures.py  study.py  study_records.py  submission_dispatch.py  worker_monitor.py  worker_resources.py
dr-dspy/src/dr_dspy/db/: __init__.py  io.py  schema.py
dr-dspy/src/dr_dspy/db/migrations/: __init__.py  env.py  url.py
dr-dspy/src/dr_dspy/db/migrations/versions/: 20260629_0001_v1_domain_schema.py  20260629_0002_throttle_backoff.py  20260629_0003_batch_submit_already_scheduled_count.py  20260629_0004_batch_submit_enqueuing_status.py  20260630_0001_append_only_outcome_triggers.py
dr-dspy/src/dr_dspy/eval_failures/: README.md  __init__.py  exceptions.py  generation.py  policy.py  recording.py
dr-dspy/src/dr_dspy/experiments/: __init__.py  humaneval_direct.py  humaneval_encdec.py
dr-dspy/src/dr_dspy/failures/: __init__.py  exceptions.py  failure_policy.py  types.py
dr-dspy/src/dr_dspy/graph/: __init__.py  execution.py  hashing.py  models.py
dr-dspy/src/dr_dspy/harness/: __init__.py  backend.py  batch.py  dbos.py  dimensions.py  flow.py  logging.py  ordering.py  repair.py  reporting.py  status.py
dr-dspy/src/dr_dspy/harness/workers/: __init__.py  monitor.py  resources.py
dr-dspy/src/dr_dspy/humaneval/: code_extraction.py  code_parsing.py  compression.py  metric_models.py  metrics.py  parsed_code.py  parsed_tests.py  profiles.py  sampling.py  scoring.py  task.py
dr-dspy/src/dr_dspy/lm/: __init__.py  boundary.py  logging.py  openrouter.py  runner.py  signatures.py  utils.py
dr-dspy/src/dr_dspy/migration/: __init__.py  v0_reshape.py
dr-dspy/src/dr_dspy/platform/: __init__.py  backoff.py  dbos_compat.py  fairness.py  graph_workflow.py  metrics.py  node_execution.py  persistence.py  prompts.py  queue_worker.py  rescoring.py  scoring.py  scoring_workflow.py  submission.py  worker.py
dr-dspy/src/dr_dspy/records/: __init__.py  batch_submit.py  hashing.py  limits.py  models.py  providers.py
dr-dspy/tests/: conftest.py  serialization_support.py  test_archive_contracts.py  test_batch_operation.py  test_code_eval.py  test_command_module_api.py  test_copro_proposers.py  test_db_io.py  test_db_migrations.py  test_db_schema.py  test_encdec_budget.py  test_eval_failures_generation.py  test_eval_failures_policy.py  test_eval_failures_recording.py  test_eval_records.py  test_eval_repair.py  test_eval_scores.py  test_eval_set.py  test_eval_submit_offsets.py  test_experiment_dimensions.py  test_experiment_spec.py  test_failure_policy.py  test_flow_commands.py  test_graph_execution.py  test_graph_imports.py  test_harness_ordering.py  test_harness_workflow_race.py  test_humaneval_dbos_flow.py  test_humaneval_eval_only_dbos.py  test_humaneval_primitives.py  test_job_ordering.py  test_lm_boundary.py  test_lm_imports.py  test_lm_logging.py  test_node_runner.py  test_openrouter_lm.py  test_platform_boundaries.py  test_platform_graph_workflow.py  test_platform_scoring.py  test_platform_submission_queue_backoff.py  (+15 more)
dr-dspy/tests/fixtures/v0_samples/: direct_generation_error.json  direct_success.json  encdec_encoder_failure.json  encdec_extraction_edge.json  encdec_success.json
dr-dspy/tests/integration/: dbos_test_workflows.py  test_platform_db_steps.py  test_platform_dbos_workflow.py  test_v0_reshape_outcomes.py  test_v0_reshape_specs.py  v0_sample_loader.py
dr-dspy/tests/support/: platform_integration_helpers.py  platform_workflow_fixtures.py  postgres_fixtures.py
dspy/: __init__.py  __metadata__.py  errors.py
dspy/_internal/: __init__.py  hashing.py  lazy_import.py  unbatchify.py
dspy/_legacy/: __init__.py  dotdict.py  magicattr.py  (+1 more)
scripts/: check_lazy_imports.py  generate_jsonrpc_errors.py  remove_comments.py  remove_docstrings.py
tests/: README.md  conftest.py  mock_interpreter.py  test_dummy_vectorizer_rng.py  test_spine_errors.py
(+815 files in other folders)
