[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
#replace_package_name_marker
name="dspy"
#replace_package_version_marker
version="3.3.0b1"
description = "DSPy"
readme = "README.md"
authors = [{ name = "Omar Khattab", email = "okhattab@stanford.edu" }]
license = {file = "LICENSE"}
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "openai>=0.28.1",
    "regex>=2023.10.3",
    "orjson>=3.9.0",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "litellm>=1.64.0",
    "json-repair>=0.54.2",
    "tenacity>=8.2.3", # undeclared runtime dep of litellm, needed for exponential_backoff_retry
    "anyio",
    "cloudpickle>=3.1.2",
    "srsly>=2.5.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0,<1.0.0"]
gepa = ["gepa[dspy]==0.1.1"]
weaviate = ["weaviate-client>=4.5.4,<4.22.0"]
mcp = ["mcp; python_version >= '3.10'"]
langchain = ["langchain_core"]
optuna = ["optuna>=3.4.0"]
numpy = ["numpy>=1.26.0"]
litellm = ["litellm>=1.64.0"]
streaming = ["jiter>=0.10.0"]
tools = ["jsonschema>=4.24.0"]
dev = [
    "pytest>=6.2.5",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0",
    "pillow>=10.1.0",
    "datamodel_code_generator>=0.26.3",
    "build>=1.0.3",
    "numpy>=1.26.0",
    "litellm>=1.64.0; sys_platform == 'win32' or python_version == '3.14'",
    "litellm[proxy]>=1.64.0; sys_platform != 'win32' and python_version < '3.14'",  # Remove 3.14 condition once uvloop supports
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.2.0",
]
test_extras = [
    "mcp; python_version >= '3.10'",
    "datasets>=2.14.6",
    "pandas>=2.1.1",
    "optuna>=3.4.0",
    "langchain_core",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dspy", "dspy.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
dspy = ["primitives/*.js", "py.typed"]

[project.urls]
homepage = "https://github.com/stanfordnlp/dspy"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/test_*.py",
    "*/tests/*.py",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
    "*/.virtualenv/*",
    "*/env/*",
    "*/.env/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "logger",
    "try",
    "except",
    "^\\s*self\\.\\w+(:\\s*[^=]+)?\\s*=.*$",
    "continue",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-n",
    "auto",
    "--dist=loadfile",
]
filterwarnings = [
    # litellm uses deprecated pydantic config classes sometimes.
    # The issue has been fixed repeatedly, but still keeps showing up.
    # For examples, see litellm PRs #6903, #7300, #8096, #9372, and #12528.
    "ignore:.+class-based `config` is deprecated, use ConfigDict:DeprecationWarning",
]

[tool.ruff]
include = ["dspy/**/*.py", "tests/**/*.py"]
exclude = [
  "dspy/__metadata__.py",
  "tests/reliability/*.py",
]


line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PIE", # flake8-pie
    "PERF", # Perflint
    "TRY", # tryceratops
    "RSE", # flake8-raise
    "T20", # flake8-print
    "S",   # flake8-bandit
]

ignore = [
    "B027",  # Allow non-abstract empty methods in abstract base classes
    "FBT003",# Allow boolean positional values in function calls
    "C901",  # Ignore complexity checking
    "E501",  # Ignore line length errors (handled by formatter)
    "UP035", # Allow python typing modules
    "RUF005", # Allow using + operator to concatenate collections
    "B904", # Allow raise custom exceptions in except blocks
    "F403", # Allow wildcard imports
    "E721", # Allow using == to compare with type
    "UP031", # Allow percent format
    "RUF022", # Allow unsorted __all__ value
    "ANN", # Defer full annotation linting to the ty rollout
    "ARG001", # Allow unused callback/metric/interface parameters
    "ARG002", # Allow unused interface/override arguments
    "BLE001", # Allow broad catches around user/tool/provider boundaries
    "B039", # Preserve existing ContextVar default behavior during lint rollout
    "N806", # Allow mathematical/third-party alias names
    "PERF203", # Allow try/except in loops where control flow is clearer
    "PERF403", # Allow incremental dictionary construction in legacy code
    "PT017", # Pytest-specific rule is noisy in non-test production helpers
    "PT018", # Allow composite assertions in production validation
    "PTH", # Defer pathlib migration to a focused compatibility pass
    "S101", # Allow runtime asserts in library code
    "S110", # Allow intentional best-effort exception suppression
    "S113", # Defer timeout policy changes to network-boundary work
    "S311", # Allow non-cryptographic randomness in ML/search utilities
    "S603", # Allow subprocess usage after existing validation
    "S607", # Allow PATH-based subprocess resolution
    "SIM102", # Preserve nested condition readability in legacy code
    "SIM105", # Preserve explicit try/except flow in legacy code
    "SIM113", # Preserve existing loop counters where return shape is coupled
    "SIM401", # Preserve explicit fallback branches with comments
    "TRY002", # Allow project exception style while ty rollout is in progress
    "TRY003", # Allow long exception messages at call sites
    "TRY004", # Preserve ValueError/RuntimeError compatibility
    "TRY300", # Allow returns inside try blocks
    "TRY301", # Allow explicit raises inside try blocks
    "TRY401", # Allow explicit exception objects in log messages
    "UP007", # Preserve runtime typing expressions
    "UP045", # Preserve runtime Optional construction
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ty>=0.0.44",
]

[tool.ruff.lint.isort]
known-first-party = ["dspy"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"dspy/core/types/**/*.py" = [
    "TC001",  # Cross-module imports are runtime-required for Pydantic models in this package.
    "TC003",  # Iterator/Callable types are referenced at runtime in stream wrappers.
]
"dspy/compile/resolve.py" = [
    "TC001",  # Runtime resolution helpers return concrete adapter/LM types.
]
"dspy/utils/transparency.py" = [
    "TC001",  # TaskSpec validation inspects field metadata at runtime.
    "N818",  # Legacy TransparencyViolation exception name
]
"dspy/adapters/base/**/*.py" = [
    "TC001",  # Mixin modules use cross-module types at runtime in adapter call/format paths.
    "TC003",  # Mapping/Sequence appear in adapter preprocess/postprocess signatures and bodies.
]
"tests/**/*.py" = [
    "S101",    # Allow assert statements in tests
    "TID252",  # Allow relative imports in tests
    "ARG001",  # Allow unused arguments in tests (like pytest fixtures)
    "ANN001",  # Allow unannotated pytest fixture parameters
    "ANN201",  # Allow unannotated test function returns
    "ANN202",  # Allow unannotated local test helpers
    "ANN204",  # Allow unannotated test class special methods
]
"__init__.py" = ["F401"]  # Init files can be empty
"dspy/__init__.py" = [
    "I001",  # Allow unsorted or unformatted imports (isort)
    "E402",  # Allow imports not at the top of the file (needed for certain __init__ patterns)
    "F405",  # Allow undefined names from wildcard imports (common in __init__ files)
]
"scripts/*.py" = ["T201"]  # CLI scripts may print status to stdout/stderr
"dspy/core/types/builders.py" = ["N802"]  # Legacy message builder API (System, User, ...)
"dspy/dsp/utils/dpr.py" = ["N802"]  # Legacy DPR_* tokenizer helpers
"dspy/utils/dotdict.py" = ["N801"]  # Legacy dotdict type name
"dspy/dsp/utils/utils.py" = ["N801"]  # Removed in dsp cutover phase 4
"dspy/evaluate/metrics.py" = ["N802"]  # Legacy metric names (EM, F1, HotPotF1)
"dspy/predict/best_of_n.py" = ["N803"]  # Legacy N parameter name
"dspy/predict/multi_chain_comparison.py" = ["N803"]  # Legacy M parameter name
"dspy/predict/refine.py" = ["N803"]  # Legacy N parameter name
"dspy/runtime/run_context.py" = ["TC001"]  # TransparencyMode required at runtime for Pydantic

[tool.ty.src]
include = ["dspy", "tests"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "custom_module.**",
    "databricks.**",
    "faiss.**",
    "langchain.tools.**",
    "mlflow.**",
    "peft.**",
    "sglang.**",
    "soundfile",
    "tomli",
    "tomllib",
    "torch.**",
    "transformers.**",
    "trl.**",
]

[[tool.ty.overrides]]
include = ["dspy/adapters/types/tool/tool.py"]
[tool.ty.overrides.rules]
unknown-argument = "ignore"

[tool.ty.environment]
python-version = "3.10"
