[project]
name = "dr-dspy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12, <3.15"
dependencies = [
    "alembic>=1.16.2",
    "datasets>=3.6.0",
    "dbos>=2.25.0",
    "dspy==3.3.0b1",
    "marimo[recommended]>=0.23.11",
    "pre-commit>=4.6.0",
    "psycopg>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.51",
    "ty>=0.0.54",
    "typer>=0.26.7",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
dspy = { workspace = true }

[tool.ruff]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Postgres and DBOS integration tests (opt-in)",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["dr_dspy", "dspy"]

[tool.ty.environment]
extra-paths = ["..", "tests"]

[tool.ty.src]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
